[gd_scene load_steps=9 format=2]

[ext_resource path="res://afterMatchMenu/mainMenu.png" type="Texture" id=1]
[ext_resource path="res://afterMatchMenu/_mainMenu.png" type="Texture" id=2]
[ext_resource path="res://afterMatchMenu/_quitGame.png" type="Texture" id=3]
[ext_resource path="res://afterMatchMenu/quitGame.png" type="Texture" id=4]
[ext_resource path="res://afterMatchMenu/tryAgain.png" type="Texture" id=5]
[ext_resource path="res://afterMatchMenu/_tryAgain.png" type="Texture" id=6]
[ext_resource path="res://Scripts/TryAgainMenu.gd" type="Script" id=7]
[ext_resource path="res://music/officialGameMusic/TitleMenuSong.wav" type="AudioStream" id=8]

[node name="TryAgainMenu" type="Node2D"]
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 266.0
margin_bottom = 136.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_left = 12.0
margin_right = 254.0
margin_bottom = 34.0
size_flags_horizontal = 4
size_flags_vertical = 4
button_mask = 0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 266.0
margin_bottom = 75.0
size_flags_horizontal = 4
size_flags_vertical = 4
button_mask = 0
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 2 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_left = 6.0
margin_top = 79.0
margin_right = 260.0
margin_bottom = 116.0
size_flags_horizontal = 4
size_flags_vertical = 4
button_mask = 0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -24.0
[connection signal="pressed" from="MarginContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
